NetBSD Problem Report #51721

From www@NetBSD.org  Thu Dec 15 18:30:59 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id B72417A289
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 15 Dec 2016 18:30:59 +0000 (UTC)
Message-Id: <20161215183058.B7E177A32E@mollari.NetBSD.org>
Date: Thu, 15 Dec 2016 18:30:58 +0000 (UTC)
From: coypu@sdf.org
Reply-To: coypu@sdf.org
To: gnats-bugs@NetBSD.org
Subject: audio_suspend mutex_vector_enter: locking against myself
X-Send-Pr-Version: www-1.0

>Number:         51721
>Category:       kern
>Synopsis:       audio_suspend mutex_vector_enter: locking against myself
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Dec 15 18:35:00 +0000 2016
>Closed-Date:    Thu Dec 15 22:10:20 +0000 2016
>Last-Modified:  Thu Dec 15 22:10:20 +0000 2016
>Originator:     coypu
>Release:        NetBSD 7.99.50
>Organization:
>Environment:
NetBSD 7.99.50 amd64
>Description:
# sysctl -w hw.acpi.sleep.state=3
...
System panicked: lock error: Mutex: mutex_vector_enter: locking against myself: lock 0xfffffe81071ad010 cpu 0 lwp 0xfffffe81355479c0
Backtrace from time of crash is available.
crash> bt
_KERNEL_OPT_NARCNET() at 0
?() at fffffe81355479c0
vpanic() at vpanic+0x149
snprintf() at snprintf
lockdebug_abort() at lockdebug_abort+0x63
mutex_vector_enter() at mutex_vector_enter+0x369
audio_suspend() at audio_suspend+0x25
device_pmf_driver_suspend() at device_pmf_driver_suspend+0x46
pmf_device_suspend_locked() at pmf_device_suspend_locked+0xeb
pmf_device_suspend() at pmf_device_suspend+0x41
pmf_system_suspend() at pmf_system_suspend+0xc1
acpi_enter_sleep_state() at acpi_enter_sleep_state+0x12c
sysctl_hw_acpi_sleepstate() at sysctl_hw_acpi_sleepstate+0xfe
sysctl_dispatch() at sysctl_dispatch+0xc1
sys___sysctl() at sys___sysctl+0xd8
syscall() at syscall+0x1df
--- syscall (number 202) ---
772b9030ca8a:


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51721 CVS commit: src/sys/dev
Date: Thu, 15 Dec 2016 22:01:57 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Thu Dec 15 22:01:57 UTC 2016

 Modified Files:
 	src/sys/dev: audio.c

 Log Message:
 In the n == VAUDIOCHANS case we need to call mutex_exit() before
 returning.

 Perhaps this will address PR kern/51721


 To generate a diff of this commit:
 cvs rdiff -u -r1.278 -r1.279 src/sys/dev/audio.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: maya@NetBSD.org
State-Changed-When: Thu, 15 Dec 2016 22:10:20 +0000
State-Changed-Why:
fixed by paul ,thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.