In the n == VAUDIOCHANS case we need to call mutex_exit() before returning.

Perhaps this will address PR kern/51721